--- a/photo-frontend/src/app/app.component.html
+++ b/photo-frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">Photography</a>
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <i class="fas fa-bars"></i>
@@ -34,25 +34,18 @@
             </ul>
           </div>
         </div>
-      </nav>
+</nav>
 
-<!-- main app container -->
-<div class="jumbotron">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6 offset-sm-3">
-                <alert></alert>
-                <router-outlet></router-outlet>
-            </div>
-        </div>
-    </div>
-</div>
+
+  <alert></alert>
+  <router-outlet></router-outlet>
+            
 
 <!-- footer -->
 <footer class="footer-bs">
     <div class="row">
         <div class="col-12" style="text-align: center">
-        © 2019 by Chasi & Leah. <a href="email:photography@gmail.com" target="_top">info@teknoart.co.il</a> |  Tel: <a href="tel:972-548412557" target="_top">972-548412557</a>
+        © 2019 by Chasi & Leah. <a href="email:photography@gmail.com" target="_top">photography@gmail.com</a> |  Tel: <a href="tel:972-548412557" target="_top">972-548412557</a>
 
             Website Made by Chasi & Leah
         </div>
