fix logout + register design and appropriate texts

--- a/photo-frontend/src/app/register/register.component.html
+++ b/photo-frontend/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 ﻿<header class="masthead">
         <div class="container">
           <div class="intro-text" style="padding-top:150px">
-            <div class="intro-lead-in">Regist</div>
+            <div class="intro-lead-in">Register</div>
             <div class="row">
                 <div class="col-lg-3">
                 </div>
