--- a/photo-frontend/src/app/start/start.component.html
+++ b/photo-frontend/src/app/start/start.component.html
@@ -288,7 +288,7 @@
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="./assets/img/team/3.jpg" alt="">
             <h4>Diana Pertersen</h4>
-            <p class="text-muted">Lead Developer</p njp>
+            <p class="text-muted">Lead Developer</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="#">
@@ -352,6 +352,11 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
           <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+            
         </div>
       </div>
     </div>
