--- a/photo-frontend/src/app/admin-home/admin-home.component.html
+++ b/photo-frontend/src/app/admin-home/admin-home.component.html
@@ -1,4 +1,5 @@
-﻿<header class="masthead">
+﻿<form>
+<header class="masthead">
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Admin Home Page</div>
