--- a/photo-frontend/src/app/admin-home/admin-home.component.html
+++ b/photo-frontend/src/app/admin-home/admin-home.component.html
@@ -34,7 +34,7 @@
             <td>{{user.emailAddress}}</td>
                 <td>{{user.userPassword}}</td>
                     <td>{{user.cellPhoneNumber}}</td>
-                        <td> {{user.userType}})</td>KD
+                        <td> {{user.userType}})</td>
 
           - <a (click)="deleteUser(user.id)" class="text-danger">Delete</a>
       </tr>
