--- a/photo-frontend/src/app/start/start.component.html
+++ b/photo-frontend/src/app/start/start.component.html
@@ -8,7 +8,6 @@
       </div>
     </div>
   </header>
-
   <!-- Services -->
   <section class="page-section" id="services">
     <div class="container">
@@ -96,7 +95,9 @@
           </a>
           <div class="portfolio-caption">
             <h4>Love</h4>
-            <p class="text-muted">Wedding</p>
+            <p class="text-muted">Kids
+              
+            </p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 portfolio-item">
